# mcg

./: .eslintrc.cjs  .gitignore  .gitmodules  .prettierrc  CNAME  Cargo.toml  MobileCardGames.csproj  MobileCardGames.sln  export_presets.cfg  icon.svg.import  index.html  jest.config.js  mcg-wasm.d.ts  mcg-wasm.js  mcg-wasm_bg.wasm.d.ts  mcg.csproj  mcg.csproj.old  mcg.sln  mcg.wasm  package.json  project.godot  pwa-configuration.js  pwa.js  readme.md  svelte.config.js  tsconfig.json
.github/workflows/: android.yml  android_docker.yml  export.yml  html5.yml  linux-x11.yml  linux.yml  mac-osx.yml  macos.yml  nodejs.yaml  tests.yml  wasm.yml  windows-desktop.yml  windows.yml
Asset/Icon/: Back.png.import
Asset/Image/: Splash.png.import
Asset/NinePatch/: Button.png.import  Input.png.import  Panel.png.import
Asset/Texture/: Banner.png.import  Pattern.png.import
Assets/Fonts/: FiraSans-Medium.ttf.import  FiraSans-Regular.ttf.import
Assets/Icon/: Back.png.import
Assets/Icons/: Back.png.import
Assets/Image/: Splash.png.import
Assets/Images/: Splash.png.import
Assets/NinePatch/: Button.png.import  Input.png.import  Panel.png.import
Assets/NinePatches/: Button.png.import  Input.png.import  Panel.png.import
Assets/Texture/: Banner.png.import  Pattern.png.import
Assets/Textures/: Banner.png.import  Pattern.png.import  PlayingCards.png.import  playing_cards.png.import
Assets/nine_patches/: button.png.import  input.png.import  panel.png.import
MobileCardGames.Shared/: MobileCardGames.Shared.shproj
MobileCardGames.Shared/Constants/: CardConstants.cs
MobileCardGames.Shared/Entities/: Deck.cs  PlayingCard.cs
MobileCardGames.Shared/Enums/: PlayingCardSuit.cs  PlayingCardValue.cs
MobileCardGames.Shared/Extensions/: PlayingCardSuitExtensions.cs
MobileCardGames.Tests/: MobileCardGames.Tests.csproj
Scene/Dev/: Menu.cs  Menu.tscn
Scenes/: SceneBase.cs
Scenes/Dev/: Deck.cs  Deck.tscn  Menu.cs  Menu.tscn
Scenes/Entities/: CardTexture.tscn  card_texture.tscn
Scenes/developer/: deck.tscn  menu.tscn
Shared/: MobileCardGames.Shared.projitems
Shared/Constants/: CardConstants.cs
Shared/Entities/: Deck.cs  PlayingCard.cs
Shared/Enums/: PlayingCardSuit.cs  PlayingCardValue.cs  Scene.cs
Shared/Extensions/: PlayingCardSuitExtensions.cs  PlayingCardValueExtensions.cs  SceneExtensions.cs
Source/: EnumExtensions.cs  MobileCardGames.csproj  NodeExtensions.cs  Signal.cs
Source/Constants/: CardConstants.cs  SignalConstants.cs
Source/Entities/: Deck.cs  PlayingCard.cs
Source/Enums/: PlayingCardSuit.cs  PlayingCardValue.cs  Scene.cs
Source/Exceptions/: ConnectException.cs  SceneException.cs
Source/Extensions/: NodeExtensions.cs  PlayingCardExtensions.cs  PlayingCardSuitExtensions.cs  PlayingCardValueExtensions.cs  SceneExtensions.cs
Source/Scenes/: SceneBase.cs
Tests/: MobileCardGames.Tests.csproj
Tests/Entities/: CardTests.cs  DeckTests.cs
Tests/Properties/: AssemblyInfo.cs
Theme/: Banner.tres  BannerFont.tres  ButtonFont.tres  ButtonStyle.tres
Themes/: Banner.tres  ButtonStyle.tres
_app/: error.svelte-09aa2f27.js  error.svelte-12aee332.js  error.svelte-3ca6d9a4.js  error.svelte-7ae86d96.js  error.svelte-9368df79.js  error.svelte-98f2491f.js  error.svelte-af1aca21.js  error.svelte-f5886724.js  manifest.json  start-5b57720f.js  start-7bd4215a.js  start-b103feda.js  start-b11e9252.js  start-c18fc431.js  start-d21fda8b.js  start-e20db619.js  start-e2947740.js  start-ec790c88.js
_app/assets/: Button-1b2834f9.css  Button-3e9036fe.css  Button-491076de.css  Panel-3c9373f6.css  Panel-b2bc9026.css  Panel-b6b465a0.css  Spinner-2b7949df.css  Spinner-d622bba4.css  app-40d9c270.css
_app/chunks/: Banner-93f1a8ae.js  Banner-bf3096d8.js  Banner-e8d44772.js  Banner-ef6bc125.js  Button-368bba4c.js  Button-3c511eeb.js  Button-ae341517.js  (+20 more)
about/: index.html
android/: Cargo.toml  build.rs
default_layout/: index.html
desktop/: Cargo.toml
dev/: index.html
login/: index.html
mcg/: Cargo.toml
mcg-android/: Cargo.toml
mcg-android/res/: launcher.xcf
mcg-android/src/: lib.rs
mcg-desktop/: Cargo.toml
mcg-wasm/: Cargo.toml
nakama/: client
res/: index.html  launcher.png.import
src/: app.css  app.html  assets.rs  claims-sw.ts  color.rs  colors.rs  game.rs  hooks.ts  lib.rs  main.rs  prompt-sw.ts  scene_manager.rs  settings.rs  style.rs  tileset.rs  time.rs
storage/: Cargo.toml
storage/js/: storage.js
storage/src/: android.rs  desktop.rs  lib.rs  wasm.rs
todos/: index.html
(+284 files in other folders)
