[package]
name = "mcg"
description = "Mobile card games"
edition = "2018"

# Patch is currently automatically incremented until 0.1
version = "0.0.198"

# hi :3

# Optimize external crates
[profile.dev.package."*"]
opt-level = 2

[dependencies]
strum = "0.21"
strum_macros = "0.21"

[dependencies.macroquad]
version = "0.3"
features = [
    # For better crash logs
    "backtrace",
]

[package.metadata.android]
# Application name
package_name = "com.kraxarn.mcg"
label = "Card Games"
# Launcher icons
res = "res/android/ic_launcher/res"
icon = "@mipmap/ic_launcher"
# Only build for amd64
build_targets = ["aarch64-linux-android"]
# Set asset folder
assets = "assets/"
