[package]
name = "mcg"
authors = ["kraxarn"]
description = "Mobile card games"
edition = "2021"

version = "0.0.1"

# hi :3

# Optimize external crates
[profile.dev.package."*"]
opt-level = 2

[dependencies]
bevy = "0.9"
strum = "0.24"
strum_macros = "0.24"
fastrand = "1.8"

[package.metadata.android]
# Application name
package_name = "com.kraxarn.mcg"
label = "Card Games"
# Launcher icons
res = "res/android/ic_launcher/res"
icon = "@mipmap/ic_launcher"
# Only build for amd64
build_targets = ["aarch64-linux-android"]
# Set asset folder
assets = "assets/"
