[package]
name = "mcg-storage"
version = "0.1.0"
edition = "2018"
description = "Config storage for desktop and web"

# Linux, macOS and Windows
[target.'cfg(any(target_os = "linux", target_os = "macos", windows))'.dependencies]
directories = "4.0"

# wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1"